--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-native-background-task": "^0.2.1",
     "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "^14.1.0",
+    "react-native-svg-charts": "^5.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
