--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-native-background-task": "^0.2.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "^14.1.0",
+    "react-native-svg": "13.9.0",
     "react-native-svg-charts": "^5.4.0"
   },
   "devDependencies": {
