--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-background-task": "^0.2.1",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
